# GenFolio

./: readme.md
client/: .env  notes.txt  package-lock.json  package.json  tailwind.config.ts
client/src/: middleware.ts  types.ts
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/components/: ActionDispatchWrapper.tsx  AddExperience.tsx  Experience.tsx  ExperienceCard.tsx  ExperienceForm.tsx  Experiences.tsx  Footer.tsx  GitHubSearch.tsx  Hero.tsx  PortfolioInputChoice.tsx  ProjectCard.tsx  Projects.tsx  Repositories.tsx  SearchGithubUsers.tsx  SkillsAndTechnologies.tsx  TechStackCard.tsx  ToolsAndTechnologies.tsx
client/src/hooks/: useDebounce.ts
client/src/lib/: mongodb.ts
client/src/models/: UserPortfolioDataModel.ts  portfolioSchema.ts  userInputSchema.ts
client/src/store/: StoreProvider.tsx  experiences.ts  extractedResumeDetailsSlice.ts  introduction.ts  portfolioDetailsSlice.ts  projects.ts  store.ts  toolsAndTechnologies.ts
client/src/utils/: fileToBase64.ts  getGithubAvatarUrl.ts  pdfExtractor.ts
portfolio/: .env  notes.md  notes.txt  package-lock.json  package.json  tailwind.config.ts
portfolio/src/: types.ts
portfolio/src/app/: layout.tsx  page.tsx
portfolio/src/components/: ErrorComponent.tsx  (+13 more)
server/: README.md  db.py  main.py  note.txt  notes.md  pyproject.toml  requirements.txt  schemas.py
server/controllers/: portfolioData.py  updatePortfolioData.py
server/routers/: portfolioData.py  updatePortfolioData.py
server/services/: agent.py  ai.py  codeGenerator.py  groq_ai.py  updatePortfolioSectionsAI.py  writeOnFile.py
(+35 files in other folders)
