[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["ChandelAnish <anish8427singh@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
sqlmodel = ">=0.0.24,<0.0.25"
fastapi = {extras = ["standard"], version = "^0.116.1"}
psycopg2 = "^2.9.10"
langchain-groq = "^0.3.7"
langchain-google-genai = "^2.1.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
